--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-hi
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Tic-Tac-Toe</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <h1>Tic-Tac-Toe</h1>
+    <div class="container">
+      <btn class="grid">X</btn>
+      <btn class="grid">X</btn>
+      <btn class="grid">X</btn>
+      <btn class="grid">X</btn>
+      <btn class="grid">X</btn>
+      <btn class="grid">X</btn>
+      <btn class="grid">X</btn>
+      <btn class="grid">X</btn>
+      <btn class="grid">X</btn>
+      
+    </div>
+    
+    <script src="script.js"></script>
+  </body>
+</html>
