--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Tic-Tac-Toe</h1>
+    <btn id="reset">NEW GAME</btn>
     <div class="container">
       <btn class="grid">X</btn>
       <btn class="grid">X</btn>
@@ -18,8 +19,8 @@
       <btn class="grid">X</btn>
       <btn class="grid">X</btn>
       <btn class="grid">X</btn>
+      </div>
       
-    </div>
     
     <script src="script.js"></script>
   </body>
