--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   </head>
   <body>
     <h1>Tic-Tac-Toe</h1>
-    <btn id="reset">NEW GAME</btn>
+    <button id="reset">NEW GAME</button>
     <div class="container">
-      <btn class="grid">X</btn>
-      <btn class="grid">X</btn>
-      <btn class="grid">X</btn>
-      <btn class="grid">X</btn>
-      <btn class="grid">X</btn>
-      <btn class="grid">X</btn>
-      <btn class="grid">X</btn>
-      <btn class="grid">X</btn>
-      <btn class="grid">X</btn>
+      <button class="grid"></button>
+      <button class="grid"></button>
+      <button class="grid"></button>
+      <button class="grid"></button>
+      <button class="grid"></button>
+      <button class="grid"></button>
+      <button class="grid"></button>
+      <button class="grid"></button>
+      <button class="grid"></button>
       </div>
       
     
