--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Tic-Tac-Toe</h1>
     <button id="reset">NEW GAME</button>
     <div class="container">
-      <button class="grid"></button>
-      <button class="grid"></button>
+      <button class="grid">X</button>
+      <button class="grid">O</button>
       <button class="grid"></button>
       <button class="grid"></button>
       <button class="grid"></button>
