--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Tic-Tac-Toe</h1>
     <button id="reset">NEW GAME</button>
-    <div class="container">
+    <div class="game">
       <button class="grid">X</button>
       <button class="grid">O</button>
       <button class="grid"></button>
