--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
   <body>
     <h1>Tic-Tac-Toe</h1>
     <button id="reset">NEW GAME</button>
-    <div class="game">
-      <button class="grid">X</button>
-      <button class="grid">O</button>
-      <button class="grid"></button>
-      <button class="grid"></button>
-      <button class="grid"></button>
-      <button class="grid"></button>
-      <button class="grid"></button>
-      <button class="grid"></button>
-      <button class="grid"></button>
+    <div class="container">
+      <div class="game">
+        <button class="grid">X</button>
+        <button class="grid">O</button>
+        <button class="grid"></button>
+        <button class="grid"></button>
+        <button class="grid"></button>
+        <button class="grid"></button>
+        <button class="grid"></button>
+        <button class="grid"></button>
+        <button class="grid"></button>
       </div>
+    </div>
+
       
     
     <script src="script.js"></script>
